--- a/index.html
+++ b/index.html
@@ -30,16 +30,19 @@
                 Disconnect
             </button>
             <button @click="sendCommandAppStart" class="border border-gray-500 px-2 bg-gray-100 hover:bg-gray-200 rounded">
-                Send AppStart
+                AppStart
             </button>
             <button @click="sendSendSelfAdvert(0)" class="border border-gray-500 px-2 bg-gray-100 hover:bg-gray-200 rounded">
-                Send Advert (Zero Hop)
+                SendSelfAdvert(ZeroHop)
             </button>
             <button @click="sendSendSelfAdvert(1)" class="border border-gray-500 px-2 bg-gray-100 hover:bg-gray-200 rounded">
-                Send Advert (Flood)
+                SendSelfAdvert(Flood)
             </button>
             <button @click="sendCommandSetAdvertName" class="border border-gray-500 px-2 bg-gray-100 hover:bg-gray-200 rounded">
-                Set Advert Name
+                SetAdvertName
+            </button>
+            <button @click="sendCommandAddUpdateContact" class="border border-gray-500 px-2 bg-gray-100 hover:bg-gray-200 rounded">
+                AddUpdateContact
             </button>
             <button @click="sendCommandSyncNextMessage" class="border border-gray-500 px-2 bg-gray-100 hover:bg-gray-200 rounded">
                 SyncNextMessage
@@ -53,6 +56,15 @@
             <button @click="sendCommandSetDeviceTime" class="border border-gray-500 px-2 bg-gray-100 hover:bg-gray-200 rounded">
                 SetDeviceTime
             </button>
+            <button @click="sendCommandSetRadioParams" class="border border-gray-500 px-2 bg-gray-100 hover:bg-gray-200 rounded">
+                SetRadioParams
+            </button>
+            <button @click="sendCommandSetTxPower" class="border border-gray-500 px-2 bg-gray-100 hover:bg-gray-200 rounded">
+                SetTxPower
+            </button>
+            <button @click="sendCommandSendTxtMsg" class="border border-gray-500 px-2 bg-gray-100 hover:bg-gray-200 rounded">
+                SendTxtMsg
+            </button>
         </div>
 
     </div>
@@ -61,6 +73,7 @@
 
 <script type="module">
     import Device from "./src/device.js";
+    import Constants from "./src/constants.js";
     Vue.createApp({
         data() {
             return {
@@ -95,6 +108,14 @@
             async sendCommandAppStart() {
                 await this.device.sendCommandAppStart();
             },
+            async sendCommandSendTxtMsg() {
+                const txtType = Constants.TxtTypes.Plain;
+                const attempt = 0;
+                const senderTimestamp = Math.floor(Date.now() / 1000);
+                const pubKeyPrefix = new Uint8Array([148, 63, 175, 162, 88, 212, 192, 40, 214, 185, 213, 140, 42, 145, 194, 186, 70, 71, 112, 68, 0, 192, 65, 4, 105, 143, 230, 50, 162, 79, 247, 192]);
+                const text = `Test Message: ${senderTimestamp}`;
+                await this.device.sendCommandSendTxtMsg(txtType, attempt, senderTimestamp, pubKeyPrefix, text);
+            },
             async sendSendSelfAdvert(type) {
                 await this.device.sendCommandSendSelfAdvert(type);
             },
@@ -108,6 +129,17 @@
                 const timestamp = Math.floor(Date.now() / 1000);
                 await this.device.sendCommandSetDeviceTime(timestamp);
             },
+            async sendCommandSetTxPower() {
+                const txPower = 22;
+                await this.device.sendCommandSetTxPower(txPower);
+            },
+            async sendCommandSetRadioParams() {
+                const radioFreq = 917375;
+                const radioBw = 250000;
+                const radioSf = 7;
+                const radioCr = 5;
+                await this.device.sendCommandSetRadioParams(radioFreq, radioBw, radioSf, radioCr);
+            },
             async sendCommandSetAdvertName() {
 
                 // ask user for name
@@ -119,6 +151,18 @@
                 // set name
                 await this.device.sendCommandSetAdvertName(name);
 
+            },
+            async sendCommandAddUpdateContact() {
+                const publicKey = new Uint8Array([148, 63, 175, 162, 88, 212, 192, 40, 214, 185, 213, 140, 42, 145, 194, 186, 70, 71, 112, 68, 0, 192, 65, 4, 105, 143, 230, 50, 162, 79, 247, 192]);
+                const type = Constants.AdvType.Chat;
+                const flags = 0;
+                const outPathLen = 0;
+                const outPath = new Uint8Array([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]);
+                const advName = "Boaty";
+                const lastAdvert = 1739244825;
+                const advLat = 0;
+                const advLon = 0;
+                await this.device.sendCommandAddUpdateContact(publicKey, type, flags, outPathLen, outPath, advName, lastAdvert, advLat, advLon);
             },
             async sendCommandSyncNextMessage() {
                 await this.device.sendCommandSyncNextMessage();
