--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!-- header -->
     <div class="flex border bg-gray-50 p-3 rounded shadow">
         <div class="my-auto">
-            <div class="font-bold">MeshCore Connection</div>
+            <div class="font-bold">MeshCore Client</div>
             <div class="text-sm">Developed by <a target="_blank" href="https://liamcottle.com" class="text-blue-500 hover:underline">Liam Cottle</a></div>
         </div>
     </div>
