--- a/index.html
+++ b/index.html
@@ -106,6 +106,11 @@
                         <div class="font-semibold">{{ contact.advName }}</div>
                         <div class="text-sm text-gray-500"><{{ bytesToHex(contact.publicKey) }}></div>
                         <div class="text-sm text-gray-500">Type: {{ contactTypeToString(contact.type) }} • Last Advert: {{ contact.lastAdvert }}</div>
+                        <div class="text-sm text-gray-500">
+                            <span v-if="contact.outPathLen === -1">Path: ???</span>
+                            <span v-else-if="contact.outPathLen === 0">Path: Direct</span>
+                            <span v-else>Path: {{ contact.outPathLen }} hops</span>
+                        </div>
                     </div>
                     <div class="flex my-auto ml-2 space-x-2">
                         <div @click="sendMessage(contact)" class="hover:underline cursor-pointer">Message</div>
