update contacts list when path is updated

--- a/index.html
+++ b/index.html
@@ -176,6 +176,7 @@
 
                 this.connection.on(Constants.PushCodes.PathUpdated, async (event) => {
                     console.log("PathUpdated", event);
+                    await this.loadContacts();
                 });
 
             },
