--- a/index.html
+++ b/index.html
@@ -92,6 +92,9 @@
                 <button @click="sendChannelTextMessage" class="border border-gray-500 px-2 bg-gray-100 hover:bg-gray-200 rounded">
                     SendChannelTxtMessage
                 </button>
+                <button @click="exportContact(null)" class="border border-gray-500 px-2 bg-gray-100 hover:bg-gray-200 rounded">
+                    ExportContact
+                </button>
             </div>
         </div>
 
@@ -119,6 +122,7 @@
                         <div @click="sendMessage(contact)" class="hover:underline cursor-pointer">Message</div>
                         <div @click="setPath(contact)" class="hover:underline cursor-pointer">Set Path</div>
                         <div @click="shareContact(contact)" class="hover:underline cursor-pointer">Share (Zero Hop)</div>
+                        <div @click="exportContact(contact)" class="hover:underline cursor-pointer">Export</div>
                         <div @click="resetPath(contact)" class="hover:underline cursor-pointer">Reset Path</div>
                         <div @click="removeContact(contact)" class="hover:underline cursor-pointer">Forget</div>
                     </div>
@@ -340,6 +344,9 @@
             },
             async shareContact(contact) {
                 await this.connection.sendCommandShareContact(contact.publicKey);
+            },
+            async exportContact(contact) {
+                await this.connection.sendCommandExportContact(contact?.publicKey);
             },
             async setPath(contact) {
 
